Text Align Fix

--- a/src/style.css
+++ b/src/style.css
@@ -56,4 +56,5 @@ label
 {
     color: white;
     font-size: 1.5rem;
+    text-align: center;
 }
